# django-auth-facebook

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py
facebook_auth/: admin.py  apps.py  auth.py  models.py  serializers.py
facebook_auth/locale/es/LC_MESSAGES/: django.mo  django.po
facebook_auth/migrations/: 0001_initial.py  0002_auto_20201116_1210.py
