[metadata]
name = django-auth-facebook
version = 0.7.2
description = Auth Facebook is a Django app to Sign up / Log in using Facebook
long_description = file: README.rst
# url = https://www.example.com/
author = Juanjo
author_email = juanjo.arreola@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0.5  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

